Made the artice list into a definition type list. W/o bugs this time.

--- a/HTML_Practice/corgi_website/corgi.html
+++ b/HTML_Practice/corgi_website/corgi.html
@@ -10,15 +10,15 @@
 		
 		<h1>Three theories why corgis are now running the Internet</h1>
 
-		<p><h2>Move over Maru,</h2> corgis are the new it-animal of the Internet now, thanks to the influence of a trendy website, a flame war, and those cute, long tongues. Get ready, you're going to be seeing a lot more of these adorable dogs you can't for the life of you justify from an evolutionary standpoint.</p>
-
-		<p>Corgis have lately been the smiling face of Buzzfeed.com, where they're mainly deployed as background photos for news-of-the-weird Twitter stories, like "Ten Corgis Who Didn't Know The Titanic Was Real" and "Jose Canseco's Insane Twitter Rant Presented By Corgis," and much, much more. The rise of the corgi was consummated as many big-on-the-Internet things are: with a hit piece. Yesterday the Atlantic Wire made note of the corgy (sorry) at Buzzfeed, daring to ask, "Are corgis even that cute?" (Is the meme resister the new crazy cat person?) Buzzfeed responded with a prodigious listicle of 108 pictures of corgis that showed with the power of a well-argued essay that corgis are not just cute, but adorbs and dawww too. Jabs were traded back and forth on Tumblr and Twitter and what have you, but it's clear that corgis are here to stay. Why? I've got three theories and one more cuddly picture after the jump.</p>
-
+		<section>Move over Maru, corgis are the new it-animal of the Internet now, thanks to the influence of a trendy website, a flame war, and those cute, long tongues. Get ready, you're going to be seeing a lot more of these adorable dogs you can't for the life of you justify from an evolutionary standpoint.</section>
+		<br>
+		<section>Corgis have lately been the smiling face of Buzzfeed.com, where they're mainly deployed as background photos for news-of-the-weird Twitter stories, like "Ten Corgis Who Didn't Know The Titanic Was Real" and "Jose Canseco's Insane Twitter Rant Presented By Corgis," and much, much more. The rise of the corgi was consummated as many big-on-the-Internet things are: with a hit piece. Yesterday the Atlantic Wire made note of the corgy (sorry) at Buzzfeed, daring to ask, "Are corgis even that cute?" (Is the meme resister the new crazy cat person?) Buzzfeed responded with a prodigious listicle of 108 pictures of corgis that showed with the power of a well-argued essay that corgis are not just cute, but adorbs and dawww too. Jabs were traded back and forth on Tumblr and Twitter and what have you, but it's clear that corgis are here to stay. Why? I've got three theories and one more cuddly picture after the jump.</section>
+<section>
 <dl>
 		<dt>1) The cat backlash is on:</dt><dd>
  Everything gets a backlash these days. New HBO show Girls, great soccer teams, and remember Lana Del Rey? All critically acclaimed, and all dragged down by the nastiness of the Internet. Sure, that's not news by now, but could cats, the perennial mascot of the Web, be the latest victim? Well, based on a cursory reading of statistics law (I'm guessing regression to the mean), the Internet's fascination with cats was bound to wane at some point. Their popularity has been thoroughly analyzed, and everyone one hates a joke when you explain it. Plus, I guarantee that you or someone you love has said, at some point, "Enough with the cats already." It was just a matter of time before we realized that there were other cute animals out there, and that diversity is a good thing, especially when diversity snuggles with stuffed versions of itself.
-
-<section><img src="cat_corgi.jpg" alt="Tiffany's cat Abbey and corgi Ichi." width="100"/></section></dd>
+<br>
+<img src="cat_corgi.jpg" alt="Tiffany's cat Abbey and corgi Ichi." width="100"/></dd>
 
 
 
