--- a/HTML_Practice/corgi_website/corgi.html
+++ b/HTML_Practice/corgi_website/corgi.html
@@ -24,18 +24,19 @@
 
 <section>
  <h2>2) Buzzfeed is flexing its powerful meme-making muscles</h2>
- It doesn't really matter at this point what Buzzfeed writes about—the story will rack up thousands and thousands of hits and "likes," going "viral," and "winning the Internet," sort of like how people think the government can control the weather. Perhaps Buzzfeed editor (and respected journalist) Ben Smith wanted to test the power of his Internet-control device, orchestrating a coup of the most entrenched Internet fad of them all that will turn into a battle of dogs vs. cats to rival Paradise Lost. OK, maybe corgis won't unseat cats, but they're going to do well, and more importantly, Buzzfeed is really starting to look like the New York Times of new media—even the New Yorker is a fan. Good for you, Buzzfeed! Tell us your digital-revenue secrets.
+ It doesn't really matter at this point what Buzzfeed writes about—the story will rack up thousands and thousands of hits and "likes," going "viral," and "winning the Internet," sort of like how people think the government can control the weather. Perhaps Buzzfeed editor (and respected journalist) Ben Smith wanted to test the power of his Internet-control device, orchestrating a coup of the most entrenched Internet fad of them all that will turn into a battle of dogs vs. cats to rival Paradise Lost. OK, maybe corgis won't unseat cats, but they're going to do well, and more importantly, Buzzfeed is really starting to look like the New York Times of new media even the New Yorker is a fan. Good for you, Buzzfeed! Tell us your digital-revenue secrets.
 </section>
 <section>
 		<h2>3) Corgis are the embodiment of the ambivalence of being</h2>
  Buzzfeed's managing editor suggests that corgis are popular because "they're happy little doggy-dwarves who are always smiling. They're sort of demented and funny-looking in a way but then also really cute, and they don't care, they're always optimistic." But what if the secret to the corgi's success is not simply its cuteness, but something deeper, more essential than that? If the lazy, coy cat is the embodiment of our desire to look good while doing nothing, is not the corgi's blank, accepting expression and constant balance between complete relaxation and hypervigilance the physical manifestation of the phrase almost all of us ask with the completion of every tedious task: "What now?" Resting in those seemingly malformed hips is the attitude we put on as we walk out the door, our alienation from our labor, the very question of being. Corgis are the spirit animals of taking in stride, and we should thank Buzzfeed for teaching us more about ourselves. (N.B. It's easier to accept that the corgi represents the tragedy of modernity when you take into account that facts died on Wednesday.)
- </section>
+ </section
 
 	</article>
-
+ 	
  	<footer>
  		<p>Tags: corgis, Internet trends, memes, going viral, dogs vs. cats, cats vs. dogs, Buzzfeed, the Atlantic, Image</p>
  		<p>HTML by Shawn Waldow Febuary 3 2016</p></footer>
 
 </body>
 
+</html>
