Started a personal profile. CV lite.

--- a/HTML_Practice/profile/profile.html
+++ b/HTML_Practice/profile/profile.html
@@ -3,8 +3,8 @@
 
 <head>
 
-
-
+<link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
 
 <title>Shawn Waldow</title>
 
@@ -13,16 +13,16 @@
 
 </head>
 
-<body bgcolor="#6324FF" text="#FFE869">
+<body bgcolor="#6324FF" style="font-family: 'Dhurjati', sans-serif; color:#FFE869; font-size:1.2em;">
 
 
-<h1>Shawn Waldow</h1>
+<h1 style="font-family: 'Audiowide', cursive;">SHAWN WALDOW</h1>
 
-<blockquote style="font-style: italic; color: #F3FF0A; background-color: #9300CD">"Programming...<br>the closest a common fellow can come to being a<br>wizard<br>in 2016."</blockquote>
+<blockquote style="font-style: italic; color: #F3FF0A; background-color: #9300CD; border-radius: 10px;">"Programming...<br>the closest a common fellow can come to being a<br>wizard<br>in 2016."</blockquote>
 
-<img src="shawn.jpg" alt="The man this page is about." width = "100"/>
+<img src="shawn.jpg" alt="The man this page is about." width = "100"/ style="border-width: 10px;">
 
-<article style="background-color: #3D01D1; border-size: 10px;">
+<article style="background-color: #3D01D1; border-width: 10px 0px; border-style: dashed; border-radius: 10px; border-color: black; padding: 10px 50px;font-family: sans-serif; font-size: .6em;">
 <p>
 Hi, Shawn here. I climbed a literal corporate ladder for the last decade, topping out on the blue collar side of our world. So now I'm making a career change to software development. I graduate from PDX Code Guild in April of 2016. I have experience relevant to the field and a strong academic background in math. For a year when housing slowed way down, I worked on contract as am underwriter for Kaiser Permanente's Small Business Group. I enjoyed the arcane large enterprise database, and I initiated automating testing tasks in Visual Basic and SQL.</p>
 
@@ -34,9 +34,9 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 
 <!--Clean this nested bullet list up! -->
 
-<ul>
 <ul style="list-style: none;">
-<li>Tech</li>
+<ul>
+<li style="font-size: 1.2em">Tech</li>
 	<ul><li>	Python</li>
 	<li>	C++</li>
 	<li>	SQL</li>
@@ -45,7 +45,7 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 	<li>	Arduino sensors</li>
 	<li>	wiring</li>
 	</ul>
-<li>Construction</li>
+<li style="font-size: 1.2em">Construction</li>
 	<ul><li>exterior finish carpentry</li>
 	<li>	weatherproofing</li>
 	<li>	estimating</li>
@@ -58,14 +58,14 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 	<li>	aluminum, steel, glass, acrylic</li>
 	</ul>
 
-<li>Entrepenership</li>
+<li style="font-size: 1.2em">Entrepenership</li>
 	<ul><li>	payroll management</li>
 	<li>	contract law</li>
 	<li>	market research</li>
 	<li>	tax preparation</li>
 	</ul>
 
-<li>Sustainablity Skills</li>
+<li style="font-size: 1.2em">Sustainablity Skills</li>
 	<ul><li>organic gardening</li>
 	<li>	animal husbandry</li>
 	<li>	farm machinery</li>
@@ -73,7 +73,7 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 	<li>	small scale forestry</li>
 	</ul>
 
-<li>Athletic Pursuits</li>
+<li style="font-size: 1.2em">Athletic Pursuits</li>
 	<ul><li>wrestling</li>
 	<li>	boxing</li>
 	<li>	Jujitsu</li>
