--- a/HTML_Practice/profile/profile.html
+++ b/HTML_Practice/profile/profile.html
@@ -20,7 +20,15 @@
 
 <blockquote style="font-style: italic; color: #F3FF0A; background-color: #9300CD; border-radius: 10px;">"Programming...<br>the closest a common fellow can come to being a<br>wizard<br>in 2016."</blockquote>
 
-<img src="shawn.jpg" alt="The man this page is about." width = "100"/ style="border-width: 10px;">
+<img src="shawn.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+
+<img src="shawn2.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+
+<img src="shawn3.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+
+<img src="shawn4.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+
+<img src="shawn5.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
 
 <article style="background-color: #3D01D1; border-width: 10px 0px; border-style: dashed; border-radius: 10px; border-color: black; padding: 10px 50px;font-family: sans-serif; font-size: .6em;">
 <p>
