--- a/HTML_Practice/profile/profile.html
+++ b/HTML_Practice/profile/profile.html
@@ -34,7 +34,7 @@
 <p>
 Hi, Shawn here. I climbed a literal corporate ladder for the last decade, topping out on the blue collar side of our world. So now I'm making a career change to software development. I graduate from PDX Code Guild in April of 2016. I have experience relevant to the field and a strong academic background in math. For a year when housing slowed way down, I worked on contract as am underwriter for Kaiser Permanente's Small Business Group. I enjoyed the arcane large enterprise database, and I initiated automating testing tasks in Visual Basic and SQL.</p>
 
-<p>I am exploring what special areas exist where I can make the biggest contribution. Programming is fun, and it is the closest a common fellow can come to being a wizard in 2016. I get emotional about the language Python. It has a great balance between doing your housekeeping automagically, but still it allows you to get down to controlling very fine details.
+<p>I am exploring what special areas exist where I can make the biggest contribution. Programming is fun, and it is the closest a common fellow can come to being a wizard in 2016. I get fired up about the language Python. It has a great balance between doing your housekeeping automagically, but still it allows you to get down to controlling very fine details.
 </p>
 </article>
 
@@ -44,7 +44,7 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 
 <ul style="list-style: none;">
 <ul>
-<li style="font-size: 1.2em">Tech</li>
+<li style="font-size: 1.2em">TECHNOLOGY</li>
 	<ul><li>	Python</li>
 	<li>	C++</li>
 	<li>	SQL</li>
@@ -52,8 +52,10 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 	<li>	Unix Shell</li>
 	<li>	Arduino sensors</li>
 	<li>	wiring</li>
+	<li>	hardware integration</li>
+	<li>	software installation</li>
 	</ul>
-<li style="font-size: 1.2em">Construction</li>
+<li style="font-size: 1.2em">CONSTRUCTION AND FABRICATION</li>
 	<ul><li>exterior finish carpentry</li>
 	<li>	weatherproofing</li>
 	<li>	estimating</li>
@@ -61,19 +63,24 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 	<li>	marketing</li>
 	<li>	retail environments</li>
 	<li>	cabinetry</li>
+	<li>	joinery</li>
+	<li>	finishing</li>
 	<li>	automation</li>
 	<li>	alternative building materials</li>
 	<li>	aluminum, steel, glass, acrylic</li>
 	</ul>
 
-<li style="font-size: 1.2em">Entrepenership</li>
-	<ul><li>	payroll management</li>
+<li style="font-size: 1.2em">ENTREPENUERSHIP</li>
+	<ul>
+	<li>	sales (i.e. customer service)</li>
+	<li>	project management</li>
+	<li>	payroll management</li>
 	<li>	contract law</li>
 	<li>	market research</li>
 	<li>	tax preparation</li>
 	</ul>
 
-<li style="font-size: 1.2em">Sustainablity Skills</li>
+<li style="font-size: 1.2em">SUSTAINABILITY</li>
 	<ul><li>organic gardening</li>
 	<li>	animal husbandry</li>
 	<li>	farm machinery</li>
@@ -81,13 +88,14 @@ Hi, Shawn here. I climbed a literal corporate ladder for the last decade, toppin
 	<li>	small scale forestry</li>
 	</ul>
 
-<li style="font-size: 1.2em">Athletic Pursuits</li>
+<li style="font-size: 1.2em">SPORT</li>
 	<ul><li>wrestling</li>
 	<li>	boxing</li>
-	<li>	Jujitsu</li>
+	<li>	jujitsu</li>
 	<li>	moutaineering</li>
 	<li>	ultra-marathons</li>
-	<li>	SCUBA</li>
+	<li>	sking</li>
+	<li>	SCUBA and freediving</li>
 	</ul>
 </ul>
 
