Went crazy with dropdown styles.

--- a/HTML_Practice/profile/profile.html
+++ b/HTML_Practice/profile/profile.html
@@ -3,101 +3,155 @@
 
 <head>
 
-<link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
 
-<title>Shawn Waldow</title>
+	<style>
+
+		blockquote {
+			font-style: italic; 
+			color: #F3FF0A; 
+			background-color: #9300CD; 
+			border-radius: 10px; 
+			padding: 20px;
+			}
+
+		body {
+			background-color: #6324FF; 
+			font-family: 'Dhurjati', sans-serif;
+			color:#FFE869; 
+			font-size:1.2em;
+		}
+
+		h1 {
+			font-family: 'Audiowide', cursive;
+		}
+
+		article {
+			background-color: #3D01D1; 
+			border-width: 10px 0px; 
+			border-style: dashed; 
+			border-radius: 10px; 
+			border-color: black;
+			padding: 10px 50px;
+			font-family: sans-serif;
+			font-size: .6em;
+		}
+
+		.shawn{
+			width: 150px;
+		}
+
+		.title{
+			font-size: 1.2em;
+		}
+
+
+		ul {
+			list-style: none;
+		}
+
+
+	</style>
+
+
+	<title>Shawn Waldow</title>
 
 
 
 
 </head>
 
-<body bgcolor="#6324FF" style="font-family: 'Dhurjati', sans-serif; color:#FFE869; font-size:1.2em;">
+<body>
 
 
-<h1 style="font-family: 'Audiowide', cursive;">SHAWN WALDOW</h1>
+	<h1>SHAWN WALDOW</h1>
 
-<blockquote style="font-style: italic; color: #F3FF0A; background-color: #9300CD; border-radius: 10px;">"Programming...<br>the closest a common fellow can come to being a<br>wizard<br>in 2016."</blockquote>
+	<blockquote>"Programming...<br>the closest a common fellow can come to being a<br>wizard<br>in 2016."</blockquote>
 
-<img src="shawn.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+	<section>
 
-<img src="shawn2.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+		<img class="shawn" src="shawn.gif" alt="The man this page is about."/>
 
-<img src="shawn3.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+		<img  class="shawn" src="shawn2.gif" alt="Shawn posterized."/>
 
-<img src="shawn4.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+		<img  class="shawn" src="shawn3.gif" alt="Shawn pixelated." />
 
-<img src="shawn5.gif" alt="The man this page is about." width = "150"/ style="border-width: 10px;">
+		<img  class="shawn" src="shawn4.gif" alt="Shawn more pixelated" />
 
-<article style="background-color: #3D01D1; border-width: 10px 0px; border-style: dashed; border-radius: 10px; border-color: black; padding: 10px 50px;font-family: sans-serif; font-size: .6em;">
-<p>
-Hi, Shawn here. I climbed a literal corporate ladder for the last decade, topping out on the blue collar side of our world. So now I'm making a career change to software development. I graduate from PDX Code Guild in April of 2016. I have experience relevant to the field and a strong academic background in math. For a year when housing slowed way down, I worked on contract as am underwriter for Kaiser Permanente's Small Business Group. I enjoyed the arcane large enterprise database, and I initiated automating testing tasks in Visual Basic and SQL.</p>
+		<img  class="shawn" src="shawn5.gif" alt="Pixel max!" />
 
-<p>I am exploring what special areas exist where I can make the biggest contribution. Programming is fun, and it is the closest a common fellow can come to being a wizard in 2016. I get fired up about the language Python. It has a great balance between doing your housekeeping automagically, but still it allows you to get down to controlling very fine details.
-</p>
-</article>
+	</section>
+
+	<article>
+		<p>
+		Hi, Shawn here. I climbed a literal corporate ladder for the last decade, and reached a point in my former trade, carpentry, where interesting new challenges were few. So now I'm making a career change to software development. I graduate from PDX Code Guild in April of 2016. I have experience relevant to the field and a strong academic background in math. For a year when housing slowed way down, I worked on contract as an underwriter for Kaiser Permanente's Small Business Group. I enjoyed learning their huge arcane database 'CM', and I initiated automating testing tasks in Visual Basic and SQL.</p>
+
+		<p>
+		I am exploring what special areas exist where I can make the biggest contribution. Programming is fun, and it is the closest a common fellow can come to being a wizard in 2016. I get fired up about the language Python. It has a great balance between doing your housekeeping automagically, but still it allows you to get down to controlling very fine details.
+		</p>
+	</article>
 
 
 
-<!--Clean this nested bullet list up! -->
+	<!--Clean this nested bullet list up! -->
 
-<ul style="list-style: none;">
-<ul>
-<li style="font-size: 1.2em">TECHNOLOGY</li>
-	<ul><li>	Python</li>
-	<li>	C++</li>
-	<li>	SQL</li>
-	<li>	Visual Basic</li>
-	<li>	Unix Shell</li>
-	<li>	Arduino sensors</li>
-	<li>	wiring</li>
-	<li>	hardware integration</li>
-	<li>	software installation</li>
-	</ul>
-<li style="font-size: 1.2em">CONSTRUCTION AND FABRICATION</li>
-	<ul><li>exterior finish carpentry</li>
-	<li>	weatherproofing</li>
-	<li>	estimating</li>
-	<li>	fall protection</li>
-	<li>	marketing</li>
-	<li>	retail environments</li>
-	<li>	cabinetry</li>
-	<li>	joinery</li>
-	<li>	finishing</li>
-	<li>	automation</li>
-	<li>	alternative building materials</li>
-	<li>	aluminum, steel, glass, acrylic</li>
-	</ul>
-
-<li style="font-size: 1.2em">ENTREPENUERSHIP</li>
 	<ul>
-	<li>	sales (i.e. customer service)</li>
-	<li>	project management</li>
-	<li>	payroll management</li>
-	<li>	contract law</li>
-	<li>	market research</li>
-	<li>	tax preparation</li>
-	</ul>
+	<ul>
+	<li class="title">TECHNOLOGY</li>
+		<ul><li>	Python</li>
+		<li>	C++</li>
+		<li>	SQL</li>
+		<li>	Visual Basic</li>
+		<li>	Unix Shell</li>
+		<li>	Arduino sensors</li>
+		<li>	wiring</li>
+		<li>	hardware integration</li>
+		<li>	software installation</li>
+		</ul>
+	<li class="title">CONSTRUCTION AND FABRICATION</li>
+		<ul><li>exterior finish carpentry</li>
+		<li>	weatherproofing</li>
+		<li>	estimating</li>
+		<li>	fall protection</li>
+		<li>	marketing</li>
+		<li>	retail environments</li>
+		<li>	cabinetry</li>
+		<li>	joinery</li>
+		<li>	finishing</li>
+		<li>	automation</li>
+		<li>	alternative building materials</li>
+		<li>	aluminum, steel, glass, acrylic</li>
+		</ul>
 
-<li style="font-size: 1.2em">SUSTAINABILITY</li>
-	<ul><li>organic gardening</li>
-	<li>	animal husbandry</li>
-	<li>	farm machinery</li>
-	<li>	flora identification</li>
-	<li>	small scale forestry</li>
-	</ul>
+	<li class="title">ENTREPENUERSHIP</li>
+		<ul>
+		<li>	sales (i.e. customer service)</li>
+		<li>	project management</li>
+		<li>	payroll management</li>
+		<li>	contract law</li>
+		<li>	market research</li>
+		<li>	tax preparation</li>
+		</ul>
 
-<li style="font-size: 1.2em">SPORT</li>
-	<ul><li>wrestling</li>
-	<li>	boxing</li>
-	<li>	jujitsu</li>
-	<li>	moutaineering</li>
-	<li>	ultra-marathons</li>
-	<li>	sking</li>
-	<li>	SCUBA and freediving</li>
+	<li class="title">SUSTAINABILITY</li>
+		<ul><li>organic gardening</li>
+		<li>	animal husbandry</li>
+		<li>	farm machinery</li>
+		<li>	flora identification</li>
+		<li>	small scale forestry</li>
+		</ul>
+
+	<li class="title">SPORT</li>
+		<ul><li>wrestling</li>
+		<li>	boxing</li>
+		<li>	jujitsu</li>
+		<li>	moutaineering</li>
+		<li>	ultra-marathons</li>
+		<li>	sking</li>
+		<li>	SCUBA and freediving</li>
+		</ul>
 	</ul>
-</ul>
 
 
 
