--- a/HTML_Practice/profile/reality.html
+++ b/HTML_Practice/profile/reality.html
@@ -128,11 +128,11 @@
 
 	<blockquote>"The common fellow can be a wizard when-he-will."</blockquote>
 
-	<img src="reality.jpg" alt = "Stream East of Faith" title = "Stream East of Faith" height = "450"/>
+	<img src="reality.jpg" alt = "Stream East of Faith" title = "Stream East of Faith (A.K.A. North Sister)" height = "450"/>
 
 
 	<footer>
-		<a href="profile.html">Go back to bits and pieces</a>
+		<a href="profile-with-jumping-ahead-sorry-tiffany.html">Go back to bits and pieces</a>
 	</footer>
 </body>
 
