--- a/HTML_Practice/profile/profile.html
+++ b/HTML_Practice/profile/profile.html
@@ -13,7 +13,8 @@
 			color: #F3FF0A; 
 			background-color: #9300CD; 
 			border-radius: 10px; 
-			padding: 20px;
+			padding: 5px;
+			max-width: 650px
 			}
 
 		body {
@@ -23,8 +24,11 @@
 			font-size:1.2em;
 		}
 
-		h1 {
+		h1, h2, h3 {
 			font-family: 'Audiowide', cursive;
+			background: url(stars.jpg);
+			background-size: 744px 25px;
+    		background-repeat: no-repeat;
 		}
 
 		article {
@@ -36,20 +40,75 @@
 			padding: 10px 50px;
 			font-family: sans-serif;
 			font-size: .6em;
+			max-width: 700px;
 		}
 
-		.shawn{
+		.shawn img{
 			width: 150px;
 		}
 
-		.title{
-			font-size: 1.2em;
-		}
-
-
 		ul {
 			list-style: none;
+			font-family: sans-serif;
+			font-size: 12px;
 		}
+
+		footer {
+			font-size: .6em;
+		}
+
+		/* Dropdowns thanks to http://www.w3schools.com/css/css_dropdowns.asp */
+		/* The container <div> - needed to position the dropdown content */
+
+		/* Style The Dropdown Button */
+		.dropbtn {
+		    background-color: #3D01D1;
+		    color: #F3FF0A;
+		    padding: 16px;
+		    font-family: 'Audiowide', cursive;
+		    font-size: 16px;
+		    border: none;
+		    cursor: pointer;
+		    border-radius: 10px;
+		    margin: 5px 15px;
+		}
+
+		.dropdown {
+		    position: relative;
+		    display: inline-block;
+		}
+
+		/* Dropdown Content (Hidden by Default) */
+		.dropdown-content {
+		    display: none;
+		    position: absolute;
+			color: #F3FF0A; 
+			background-color: #9300CD; 
+			padding:5px 10px;
+			border-radius: 10px; 
+		    min-width: 180px;
+		    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+		    margin: -5px 15px;
+
+		}
+
+		/* Change color of dropdown links on hover */
+		.dropdown-content a:hover {background-color: #f1f1f1}
+
+		/* Show the dropdown menu on hover */
+		.dropdown:hover .dropdown-content {
+		    display: block;
+		}
+
+		/* Change the background color of the dropdown button when the dropdown content is shown (was #3e8e41)*/
+		.dropdown:hover .dropbtn {
+		    background-color: black;
+		}
+
+
+
+
+
 
 
 	</style>
@@ -67,21 +126,58 @@
 
 	<h1>SHAWN WALDOW</h1>
 
-	<blockquote>"Programming...<br>the closest a common fellow can come to being a<br>wizard<br>in 2016."</blockquote>
+	<blockquote>"Programming...the closest a common fellow can come to being a wizard in 2016."</blockquote>
 
-	<section>
 
-		<img class="shawn" src="shawn.gif" alt="The man this page is about."/>
 
-		<img  class="shawn" src="shawn2.gif" alt="Shawn posterized."/>
+	<div class="dropdown">
+	  <button class="dropbtn">TECHNOLOGY</button>
+	  <div class="dropdown-content">
+		<ul>
+			<li>	Python</li>
+			<li>	C++</li>
+			<li>	SQL</li>
+			<li>	Visual Basic</li>
+			<li>	Unix Shell</li>
+			<li>	Arduino sensors</li>
+			<li>	hardware integration</li>
+			<li>	software installation</li>
+		</ul>
+	  </div>
+	</div>
 
-		<img  class="shawn" src="shawn3.gif" alt="Shawn pixelated." />
 
-		<img  class="shawn" src="shawn4.gif" alt="Shawn more pixelated" />
+	<div class="dropdown">
+	  <button class="dropbtn">ENTREPENUERSHIP</button>
+	  <div class="dropdown-content">
+			<ul>
+				<li>	sales (i.e. customer service)</li>
+				<li>	project management</li>
+				<li>	payroll management</li>
+				<li>	contract law</li>
+				<li>	market research</li>
+				<li>	tax preparation</li>
+			</ul>
+		</div>
+	</div>
 
-		<img  class="shawn" src="shawn5.gif" alt="Pixel max!" />
 
-	</section>
+	<div class="dropdown">
+	  <button class="dropbtn">SUSTAINABILITY</button>
+	  <div class="dropdown-content">	
+			<ul><li>organic gardening</li>
+			<li>	animal husbandry</li>
+			<li>	farm machinery</li>
+			<li>	flora identification</li>
+			<li>	small scale forestry</li>
+			<li>	alternative building materials</li>
+
+			</ul>
+		</div>
+	</div>
+
+
+
 
 	<article>
 		<p>
@@ -94,67 +190,58 @@
 
 
 
-	<!--Clean this nested bullet list up! -->
-
-	<ul>
-	<ul>
-	<li class="title">TECHNOLOGY</li>
-		<ul><li>	Python</li>
-		<li>	C++</li>
-		<li>	SQL</li>
-		<li>	Visual Basic</li>
-		<li>	Unix Shell</li>
-		<li>	Arduino sensors</li>
-		<li>	wiring</li>
-		<li>	hardware integration</li>
-		<li>	software installation</li>
-		</ul>
-	<li class="title">CONSTRUCTION AND FABRICATION</li>
-		<ul><li>exterior finish carpentry</li>
-		<li>	weatherproofing</li>
-		<li>	estimating</li>
-		<li>	fall protection</li>
-		<li>	marketing</li>
-		<li>	retail environments</li>
-		<li>	cabinetry</li>
-		<li>	joinery</li>
-		<li>	finishing</li>
-		<li>	automation</li>
-		<li>	alternative building materials</li>
-		<li>	aluminum, steel, glass, acrylic</li>
-		</ul>
-
-	<li class="title">ENTREPENUERSHIP</li>
-		<ul>
-		<li>	sales (i.e. customer service)</li>
-		<li>	project management</li>
-		<li>	payroll management</li>
-		<li>	contract law</li>
-		<li>	market research</li>
-		<li>	tax preparation</li>
-		</ul>
-
-	<li class="title">SUSTAINABILITY</li>
-		<ul><li>organic gardening</li>
-		<li>	animal husbandry</li>
-		<li>	farm machinery</li>
-		<li>	flora identification</li>
-		<li>	small scale forestry</li>
-		</ul>
-
-	<li class="title">SPORT</li>
-		<ul><li>wrestling</li>
-		<li>	boxing</li>
-		<li>	jujitsu</li>
-		<li>	moutaineering</li>
-		<li>	ultra-marathons</li>
-		<li>	sking</li>
-		<li>	SCUBA and freediving</li>
-		</ul>
-	</ul>
+	<div class="dropdown">
+	  <button class="dropbtn">CONSTRUCTION AND FABRICATION</button>
+	  <div class="dropdown-content">
+			<ul>
+				<li>exterior finish carpentry</li>
+				<li>	weatherproofing</li>
+				<li>	estimating</li>
+				<li>	fall protection</li>
+				<li>	retail environments</li>
+				<li>	cabinetry</li>
+				<li>	joinery</li>
+				<li>	wiring</li>
+				<li>	aluminum, steel, glass, acrylic</li>
+			</ul>
+		</div>
+	</div>
 
 
+	<div class="dropdown">
+	  <button class="dropbtn">SPORT</button>
+	  <div class="dropdown-content">
+			<ul>
+				<li>	wrestling</li>
+				<li>	boxing</li>
+				<li>	jujitsu</li>
+				<li>	moutaineering</li>
+				<li>	ultra-marathons</li>
+				<li>	sking</li>
+				<li>	SCUBA and freediving</li>
+			</ul>
+		</div>
+	</div>
 
+
+	<section class = "shawn">
+
+		<img src="shawn.gif" alt="The man this page is about."/>
+
+		<img  src="shawn2.gif" alt="Shawn posterized."/>
+
+		<img  src="shawn3.gif" alt="Shawn pixelated." />
+
+		<img  src="shawn4.gif" alt="Shawn more pixelated" />
+
+		<img  src="shawn5.gif" alt="Pixel max!" />
+
+	</section>
+
+
+	<footer>
+		<a href="reality.html">Reality Check</a>
+	</footer>
 </body>
 
 </html>
