--- a/HTML_Practice/profile/reality.html
+++ b/HTML_Practice/profile/reality.html
@@ -5,113 +5,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
-
-	<style>
-
-		blockquote {
-			font-style: italic; 
-			color: #F3FF0A; 
-			background-color: #9300CD; 
-			border-radius: 10px; 
-			padding: 5px;
-			max-width: 650px
-			}
-
-		body {
-			background-color: #6324FF; 
-			font-family: 'Dhurjati', sans-serif;
-			color:#FFE869; 
-			font-size:1.2em;
-		}
-
-		h1 {
-			font-family: 'Audiowide', cursive;
-			background: url(stars.jpg);
-			background-size: 744px 25px;
-    		background-repeat: no-repeat;
-		}
-
-		article {
-			background-color: #3D01D1; 
-			border-width: 10px 0px; 
-			border-style: dashed; 
-			border-radius: 10px; 
-			border-color: black;
-			padding: 10px 50px;
-			font-family: sans-serif;
-			font-size: .6em;
-			max-width: 700px;
-		}
-
-		.shawn{
-			width: 150px;
-		}
-
-		ul {
-			list-style: none;
-			font-family: sans-serif;
-			font-size: 12px;
-		}
-
-		footer {
-			font-size: .6em;
-		}
-
-		/* Dropdowns thanks to http://www.w3schools.com/css/css_dropdowns.asp */
-		/* The container <div> - needed to position the dropdown content */
-
-		/* Style The Dropdown Button */
-		.dropbtn {
-		    background-color: #3D01D1;
-		    color: #F3FF0A;
-		    padding: 16px;
-		    font-family: 'Audiowide', cursive;
-		    font-size: 16px;
-		    border: none;
-		    cursor: pointer;
-		    border-radius: 10px;
-		    margin: 5px 15px;
-		}
-
-		.dropdown {
-		    position: relative;
-		    display: inline-block;
-		}
-
-		/* Dropdown Content (Hidden by Default) */
-		.dropdown-content {
-		    display: none;
-		    position: absolute;
-			color: #F3FF0A; 
-			background-color: #9300CD; 
-			padding:5px 10px;
-			border-radius: 10px; 
-		    min-width: 180px;
-		    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-		    margin: -5px 15px;
-
-		}
-
-		/* Change color of dropdown links on hover */
-		.dropdown-content a:hover {background-color: #f1f1f1}
-
-		/* Show the dropdown menu on hover */
-		.dropdown:hover .dropdown-content {
-		    display: block;
-		}
-
-		/* Change the background color of the dropdown button when the dropdown content is shown (was #3e8e41)*/
-		.dropdown:hover .dropbtn {
-		    background-color: black;
-		}
-
-
-
-
-
-
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 
 
 	<title>Shawn Waldow - Reality's Real Nice</title>
@@ -132,7 +26,7 @@
 
 
 	<footer>
-		<a href="profile-with-jumping-ahead-sorry-tiffany.html">Go back to bits and pieces</a>
+		<a href="profile.html">Go back to bits and pieces</a>
 	</footer>
 </body>
 
