Combed over the content for wording.

--- a/HTML_Practice/profile/profile.html
+++ b/HTML_Practice/profile/profile.html
@@ -5,113 +5,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
-
-	<style>
-
-		blockquote {
-			font-style: italic; 
-			color: #F3FF0A; 
-			background-color: #9300CD; 
-			border-radius: 10px; 
-			padding: 5px;
-			max-width: 650px
-			}
-
-		body {
-			background-color: #6324FF; 
-			font-family: 'Dhurjati', sans-serif;
-			color:#FFE869; 
-			font-size:1.2em;
-		}
-
-		h1, h2, h3 {
-			font-family: 'Audiowide', cursive;
-			background: url(stars.jpg);
-			background-size: 744px 25px;
-    		background-repeat: no-repeat;
-		}
-
-		article {
-			background-color: #3D01D1; 
-			border-width: 10px 0px; 
-			border-style: dashed; 
-			border-radius: 10px; 
-			border-color: black;
-			padding: 10px 50px;
-			font-family: sans-serif;
-			font-size: .6em;
-			max-width: 700px;
-		}
-
-		.shawn img{
-			width: 150px;
-		}
-
-		ul {
-			list-style: none;
-			font-family: sans-serif;
-			font-size: 12px;
-		}
-
-		footer {
-			font-size: .6em;
-		}
-
-		/* Dropdowns thanks to http://www.w3schools.com/css/css_dropdowns.asp */
-		/* The container <div> - needed to position the dropdown content */
-
-		/* Style The Dropdown Button */
-		.dropbtn {
-		    background-color: #3D01D1;
-		    color: #F3FF0A;
-		    padding: 16px;
-		    font-family: 'Audiowide', cursive;
-		    font-size: 16px;
-		    border: none;
-		    cursor: pointer;
-		    border-radius: 10px;
-		    margin: 5px 15px;
-		}
-
-		.dropdown {
-		    position: relative;
-		    display: inline-block;
-		}
-
-		/* Dropdown Content (Hidden by Default) */
-		.dropdown-content {
-		    display: none;
-		    position: absolute;
-			color: #F3FF0A; 
-			background-color: #9300CD; 
-			padding:5px 10px;
-			border-radius: 10px; 
-		    min-width: 180px;
-		    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-		    margin: -5px 15px;
-
-		}
-
-		/* Change color of dropdown links on hover */
-		.dropdown-content a:hover {background-color: #f1f1f1}
-
-		/* Show the dropdown menu on hover */
-		.dropdown:hover .dropdown-content {
-		    display: block;
-		}
-
-		/* Change the background color of the dropdown button when the dropdown content is shown (was #3e8e41)*/
-		.dropdown:hover .dropbtn {
-		    background-color: black;
-		}
-
-
-
-
-
-
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 
 
 	<title>Shawn Waldow</title>
@@ -138,10 +32,10 @@
 			<li>	C++</li>
 			<li>	SQL</li>
 			<li>	Visual Basic</li>
-			<li>	Unix Shell</li>
+			<li>	Django</li>
+			<li>	JavaScript</li>
 			<li>	Arduino sensors</li>
 			<li>	hardware integration</li>
-			<li>	software installation</li>
 		</ul>
 	  </div>
 	</div>
@@ -180,12 +74,11 @@
 
 
 	<article>
-		<p>
-		Hi, Shawn here. I climbed a literal corporate ladder for the last decade, and reached a point in my former trade, carpentry, where interesting new challenges were few. So now I'm making a career change to software development. I graduate from PDX Code Guild in April of 2016. I have experience relevant to the field and a strong academic background in math. For a year when housing slowed way down, I worked on contract as an underwriter for Kaiser Permanente's Small Business Group. I enjoyed learning their huge arcane database 'CM', and I initiated automating testing tasks in Visual Basic and SQL.</p>
 
-		<p>
-		I am exploring what special areas exist where I can make the biggest contribution. Programming is fun, and it is the closest a common fellow can come to being a wizard in 2016. I get fired up about the language Python. It has a great balance between doing your housekeeping automagically, but still it allows you to get down to controlling very fine details.
-		</p>
+	<p>Hi, Shawn here. I climbed a very real corporate ladder from age 16, building, woodworking, and fabricating. For five years, I ran a small company building homes. Things slowed in 2009, so I put my entrepreneur hat aside. Later I joined a great team that concentrated on fine craft closely, making displays for big clothing companies. Before long we were installing software, integrating hardware, and debugging sensors as "carpenters"? Yes. Even shoe shelves are networked now. The Internet of things is here. So, I want to serve and learn to lead as a software developer.</p>
+	<p>In addition to my skill for prototyping interactive displays in wood, steel, glass, and silicone, I have programming experience and a strong academic background in math. I worked on contract as an underwriter for a large health insurer for one year. That job included scripting contract data in a huge, arcane database.</p>
+	<p>Now I graduate from PDX Code Guild in May of 2016. It might sound saccharine and simple, but programming is fun! It's the closest a common fellow can come to being a wizard in 2016. It's easy to get fired up about the language Python. It has a good balance between automating your housekeeping and allowing you control of any details needed. Are you creating apps? I can contribute right now at many levels with skills in Python, JavaScript, HTML 5, Django, SQL, C++, and most importantly I have mastered the ability to learn and with plain, old-school work ethic adapting to solve problems for your customers.</p>
+	
 	</article>
 
 
@@ -240,7 +133,7 @@
 
 
 	<footer>
-		<a href="reality.html">Reality Check</a>
+		<a href="reality.html">Don't forget to go outside.</a>
 	</footer>
 </body>
 
