--- a/javapic/javapic/gallery.html
+++ b/javapic/javapic/gallery.html
@@ -14,5 +14,6 @@
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
 
+<script src="js/gallery.js"></script>
 </body>
 </html>
