--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<html>
+<head>Shawn's Assignment Repo</head>
+<body>
+<h1>This is Shawn's assignment repo!</h1>
+Hello world!
+</body>
+</html>
