--- a/forum/forum.html
+++ b/forum/forum.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>Forum Assignment</title>
 
     <link rel="stylesheet" media="screen" href="forum.css">
