Posts parsed and ready to loop load.

--- a/forum/forum.html
+++ b/forum/forum.html
@@ -20,11 +20,11 @@
 
     </section>
 
-    <main id="main-posts" role="main">
+    <main role="main">
 
-        <div class = "post">
-            <H2 class = "post">A hardcoded post</H2>
-            <div class = "body">Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...</div>
+        <div id="main-posts" class = "post">
+          <!--  <H2 class = "post">A hardcoded post</H2>
+            <div class = "body">Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...Hardcoded content...</div>-->
         </div>
 
         <div class = "new-post">
