Almost to MVP. Weird timeing error still needs worked out. Must colorize css and give lucas credit.

--- a/forum/forum.html
+++ b/forum/forum.html
@@ -32,7 +32,8 @@
             <H2 class = "new-post">Your post:</H2>
             <div class ="body">
                 <form id="signup" method="post">
-                    <textarea name="textarea" rows="5" cols="80"></textarea><br/>
+                    <input type="text" id="title" placeholder="Post title" required/>
+                    <textarea name="textarea" rows="5" cols="80" placeholder="Post your stuff." required></textarea><br/>
                     <input type="submit" name="submit" id="submit" value="Post to Forum" />
                 </form>
             </div>
